# ckb-light-client

./: Cargo.toml  Makefile  README.md  config.toml
.github/: codecov.yaml
.github/workflows/: ci.yaml  release.yaml
config/: mainnet.toml  testnet.toml
src/: cli.yaml  config.rs  error.rs  main.rs  patches.rs  service.rs  storage.rs  subcmds.rs  types.rs  verify.rs
src/protocols/: mod.rs  relayer.rs  status.rs  synchronizer.rs
src/protocols/filter/: block_filter.rs  mod.rs
src/protocols/filter/components/: block_filter_check_points_process.rs  block_filter_hashes_process.rs  block_filters_process.rs  mod.rs
src/protocols/light_client/: constant.rs  mod.rs  peers.rs  prelude.rs  sampling.rs  status.rs
src/protocols/light_client/components/: mod.rs  send_block_proof.rs  send_block_samples.rs  send_blocks_proof.rs  send_chain_info.rs  send_last_header.rs  send_last_state.rs  send_last_state_proof.rs  send_transactions_proof.rs  send_txs_proof.rs
src/protocols/light_client/components/tests/: mod.rs  send_block_samples.rs  send_last_state_proof.rs
src/protocols/light_client/strategies/: binary_search_approach.rs  bounding_the_fork_point.rs  mod.rs  naive_approach.rs
src/protocols/light_client/tests/: mod.rs  sampling.rs
src/tests/: mock_context.rs  mod.rs  prelude.rs  service.rs  storage.rs  verify.rs
src/tests/protocols/: block_filter.rs  mock_context.rs  mod.rs  synchronizer.rs
src/tests/protocols/light_client/: mod.rs  send_blocks_proof.rs  send_last_state.rs  send_last_state_proof.rs  send_transactions_proof.rs
src/tests/specs/: dummy_pow.toml
src/tests/utils/: chain.rs  mod.rs  network_context.rs
src/utils/: fs.rs  mod.rs  network.rs
