[package]
name = "ckb-light-client"
version = "0.1.0-alpha.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2021"
license = "MIT"
description = "A CKB light client based on FlyClient."
homepage = "https://github.com/nervosnetwork/ckb-light-client"
repository = "https://github.com/nervosnetwork/ckb-light-client"

[dependencies]
ckb-app-config    = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-async-runtime = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-constant      = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-types         = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-network       = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-jsonrpc-types = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-error         = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-script        = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-chain-spec    = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-traits        = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-resource      = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-verification  = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-merkle-mountain-range = "0.5.1"
golomb-coded-set = "0.2.0"
rocksdb = { package = "ckb-rocksdb", version ="=0.18.3", features = ["snappy"] }
numext-fixed-uint = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
anyhow = "1.0.56"
thiserror = "1.0.30"
log = "0.4.14"
env_logger = "0.9.0"
clap = { version = "2.34.0", features = ["yaml"]  }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
ctrlc = { version = "3.2.1", features = ["termination"] }
path-clean = "0.1.0"
rand = "0.8.5"
dashmap = "5.3"
linked-hash-map = "0.5.6"
faketime = "0.2.1"
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-server-utils = "18.0"

[dev-dependencies]
ckb-launcher    = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-shared      = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-chain       = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-tx-pool     = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
ckb-store       = { git="https://github.com/nervosnetwork/ckb", rev = "e976f2f2c3dfbabd257bfde1109ac327fd143579" }
tempfile = "3.0"
rand = "0.6"
serde_json = "1.0"
tokio = { version = "1.20" }

[features]
default = []
portable = ["rocksdb/portable"]

[profile.release]
overflow-checks = true

[badges]
maintenance = { status = "experimental" }
