[package]
name = "ckb-light-client"
version = "0.3.4"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "A CKB light client based on FlyClient."
homepage = "https://github.com/nervosnetwork/ckb-light-client"
repository = "https://github.com/nervosnetwork/ckb-light-client"

[dependencies]
ckb-app-config    = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-async-runtime = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-stop-handler  = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-constant      = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-types         = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-network       = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-jsonrpc-types = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-error         = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-script        = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-chain-spec    = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-traits        = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-resource      = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-verification  = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-systemtime    = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-hash          = { git = "https://github.com/quake/ckb", branch = "quake/light-client-extension" }
ckb-merkle-mountain-range = "0.5.1"
golomb-coded-set = "0.2.0"
rocksdb = { package = "ckb-rocksdb", version ="=0.20.0", features = ["snappy"], default-features = false }
numext-fixed-uint = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
anyhow = "1.0.56"
thiserror = "1.0.30"
log = "0.4.14"
env_logger = "0.9.0"
clap = { version = "2.34.0", features = ["yaml"]  }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
ctrlc = { version = "3.2.1", features = ["termination"] }
path-clean = "0.1.0"
rand = "0.8.5"
dashmap = "5.3"
linked-hash-map = "0.5.6"
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-server-utils = "18.0"

[dev-dependencies]
ckb-launcher    = "0.111.0"
ckb-shared      = "0.111.0"
ckb-chain       = "0.111.0"
ckb-tx-pool     = "0.111.0"
ckb-store       = "0.111.0"
ckb-systemtime  = { version = "0.111.0", features = ["enable_faketime"] }
tempfile = "3.0"
rand = "0.6"
serde_json = "1.0"
tokio = { version = "1.20" }
lazy_static = "1.3.0"

[features]
default = []
portable = ["rocksdb/portable"]
march-native = ["rocksdb/march-native"]

[profile.release]
overflow-checks = true

[badges]
maintenance = { status = "experimental" }
